@@ -1,3 +1,7 @@
+2017-01-14  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/: change headers dates for 2017 for all sources.
+
 2017-01-13  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/logger/: change headers dates for 2017 for all sources.
